# aurion_hackathon

./: .dockerignore  .env.example  .gitignore  LIVE-MAILBOX.md  README.md  foundry-vs-agent-framework-workflows.md  project-scope.md  rbac-guide.md
app/aurion-hosted-agent/: Dockerfile  README.md  agent.yaml  config.py  executor.py  main.py  pyproject.toml  workflow.py
app/backend/: pyproject.toml
app/backend/aurion_claim_workflow/: config.py  main.py  models.py  workflow.py
app/backend/aurion_claim_workflow/executors/: classify.py  decide.py  doc_intelligence.py  email_intake.py  extract.py  respond.py
app/backend/playground/: README.md  run_scenarios.py  test_doc_intelligence.py  test_graph.py
app/backend/playground/sample_data/: emails.py  generate_sample_pdf.py
app/backend/server/: app.py  deps.py
app/backend/server/routes/: claims.py  claims_stream.py  mailbox.py
app/backend/tests/: test_models.py
app/frontend/src/: App.css  App.tsx  index.css  types.ts
app/frontend/src/components/: ClaimForm.css  ClaimForm.tsx  MailboxView.css  MailboxView.tsx  PipelineView.css  PipelineView.tsx  ResponseDraft.css  ResponseDraft.tsx  StepDetails.css  StepDetails.tsx
app/frontend/src/hooks/: useClaimWorkflow.ts  useMailbox.ts
infra/: deploy.ps1  main.bicep  main.bicepparam  main.json  resources.bicep  resources.json
